cleaned up file hashing stringification